<resources>
    <string name="app_name">gestor_pedido</string>
    <string name="txtViewProducts">Productos!</string>
    <string name="btnOpenProductsView">Abrir productos</string>
    <string name="btnOpenOrderView">Abrir Ordenes</string>
    <string name="txProductName">Nombre del producto</string>
    <string name="txProductStock">Stock Producto</string>
    <string name="btnAddProduct">Agregar producto</string>
    <string name="title_activity_products">Productos</string>
    <string name="btnLogin">Inicio Sesion</string>
    <string name="btnRegister">Registrarse</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txtUser">Email</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtEmail">Email</string>
    <string name="txtRePassword">Repite Contraseña</string>
    <string name="btnAddNewUser">Registro</string>
    <string name="title_activity_porders">Ordenes </string>
    <string name="title_activity_add_porder">Agregar Ordenes</string>
    <string name="btnAddOrder">Agregar orden</string>
    <!-- String asociados al activity RegisterPeron-->
    <string name="txtName">Nombre</string>
    <string name="txtLastName">Apellido</string>
    <string name="rbMacho">Masculino</string>
    <string name="rbHembra">Femenino</string>
    <string name="spPerson">Persona</string>
    <string name="spProduct">Producto</string>
    <string name="txtRut">Rut</string>

    <string name="rbStatusOff">Pendiente</string>
    <string name="rbStatusOn">Activo</string>


    <!-- String asociado a Menu Activity-->
    <string name="btnAddOrden">Ordenar</string>
    <string name="btnEditProfile">Editar Perfil</string>
    <string name="txTotal">Total</string>
    <string name="title_activity_edit_product">Activity_edit_product</string>
    <string name="btnUpdateProduct">Actualizar producto</string>
    <string name="txUpdateName">Nombre</string>
    <string name="txUpdateStock">Stock</string>
    <string name="btnDeleteProduct">Eliminar producto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_menu">NewMenu</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

</resources>
