<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_add_order"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/title_activity_porders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
    <Spinner
        android:id="@+id/spProduct"
        android:text="@string/spProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Spinner>
    <RadioGroup
        android:id="@+id/rdStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/rbFalse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbStatusOn" />

        <RadioButton
            android:id="@+id/rbTrue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbStatusOff" />
    </RadioGroup>
    <EditText
        android:id="@+id/txTotal"
        android:hint="@string/txTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnSubmitNewOrder"
        android:text="@string/btnAddOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
</LinearLayout>