<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.LoginFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/txtFragLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/txtUser" />

    <EditText
        android:id="@+id/txtFragLoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/txtPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFragLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnLogin"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>