<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPersonActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/txtLastNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgSexoEdit">
        <RadioButton
            android:id="@+id/rbMachoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMacho" />

        <RadioButton
            android:id="@+id/rbHembraEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbHembra" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spLocationEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditProfile" />
</LinearLayout>